[tool.poetry]
name = "dolo"
version = "0.4.9.15"
readme = "README.md"
description = "Economic Modeling in Python"
authors = ["Winant Pablo <pablo.winant@gmail.com>"]
license="BSD-2-Clause"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
interpolation = "^2.1.6"
numpy = "^1.16.0"
ipython = "^7.13.0"
pandas = "^1.0.3"
pyyaml = "^5.3.1"
matplotlib = "^3.0.1"
scipy = "^1.4.1"
quantecon = "^0.4.7"
xarray = "^0.15.1"
multipledispatch = "^0.6.0"
dolang = "0.0.14"
line-profiler = "^3.2.6"

[tool.poetry.dev-dependencies]
mkdocs-material = "^7.1.8"
pytest = "^5.2"
mkdocs = "^1.1"
mkapi = "^1.0.5"
pymdown-extensions = "^7.1"
python-markdown-math = "^0.6"
mypy = "^0.782"
pylint = "^2.6.0"
ipykernel = "^5.3.4"
coverage = "^5.3"
pytest-cov = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
