[tool.poetry]
name = "dolo"
version = "0.4.9.18"
readme = "README.md"
description = "Economic Modeling in Python"
authors = ["Winant Pablo <pablo.winant@gmail.com>"]
license="BSD-2-Clause"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
interpolation = "^2.2.4"
numpy = "^1.22.2"
ipython = "^8.5.0"
pandas = "^1.5.0"
PyYAML = "^6.0"
matplotlib = "^3.6.0"
scipy = "^1.9.1"
quantecon = "^0.5.3"
xarray = "^2022.6.0"
multipledispatch = "^0.6.0"
dolang = "^0.0.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mkdocs = "^1.3.1"
mkapi = "^1.0.14"
mypy = "^0.971"
pylint = "^2.15.3"
ipykernel = "^6.15.3"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"
black = "^22.8.0"
pymdown-extensions = "^9.5"
python-markdown-math = "^0.8"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
