[tool.poetry]
name = "dolo"
version = "0.4.9.20"
readme = "README.md"
description = "Economic Modeling in Python"
authors = ["Winant Pablo <pablo.winant@gmail.com>"]
license="BSD-2-Clause"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=2.0.0"
PyYAML = "^6.0"
interpolation = "^2.2.7"
pandas = "^2.2.2"
matplotlib = "^3.6.0"
scipy = "^1.11.1"
quantecon = "^0.7.2"
xarray = "^2024.1.0"
multipledispatch = "^0.6.0"
dolang = "^0.0.21"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^24.3.0"
pylint = "^2.15.3"
mkdocs = "^1.3.1"
mkapi = "^1.0.14"
mypy = "^0.971"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"
pymdown-extensions = "^9.5"
python-markdown-math = "^0.8"

[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.masonry.api"
